--- a/landing.html
+++ b/landing.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
  <h1>Welcome to my CSIS 304 assignments page</h1>
   
 <ol>
-  <li><a href=https://nicholasaly.github.io/>Personal Project<a></a></li>
+  <li><a href=https://nicholasaly.github.io/>Personal Project</a></li>
 </ol>
   
 </body>
