--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <h1>Welcome to my CSIS 304 assignments page</h1>
   
 <ol>
-  <li><a href=https://nicholasaly.github.io/>Personal Project</a></li>
+  <li><a href=personal.html>Personal Project</a></li> 
 </ol>
   
 </body>
