--- a/personal.html
+++ b/personal.html
@@ -17,7 +17,7 @@
  </header>
 </br>
   
-<div id="left"><img id="right" src=family.jpg alt="family picture"  height="350px">Hello and welcome to my personal blog webpage. My name is Nicholas Alyateem the one on the far right of the picture.You can see the rest of my family as well. I have 2 younger brothers Keenan and Andrew and one older sister Oriane. I was origionally born in Portland Oregon where I grew up for the first years of my life. We later moved back to our home town Bethlehem, Palestine where I lived for the past 10 years and recently I moved back to the USA for studies. I am currentyl at George Fox University studying computer science.
+<div id="left"><img id="right" src=family.jpg alt="family picture"  height="500px"><h1>About the Author</h1>Hello and welcome to my personal blog webpage. My name is Nicholas Alyateem the one on the far right of the picture.You can see the rest of my family as well. I have 2 younger brothers Keenan and Andrew and one older sister Oriane. I was origionally born in Portland Oregon where I grew up for the first years of my life. We later moved back to our home town Bethlehem, Palestine where I lived for the past 10 years and recently I moved back to the USA for studies. I am currentyl at George Fox University studying computer science.
 </br>
   </br>
   </br>
