--- a/personal.html
+++ b/personal.html
@@ -13,16 +13,18 @@
  <header id = head>
  <a href=personal.html><b>Home Page</b></a>
  | <a href="new.html">Blogs</a>
- | <a href="">Contact Me</a>
+ | <a href="contact.html">Contact Me</a>
  </header>
-</br>
+<br>
   
-<div id="left"><img id="right" src=family.jpg alt="family picture"  height="500px"><h1>About the Writer</h1>Hello and welcome to my personal blog webpage. My name is Nicholas Alyateem the one on the far right of the picture.You can see the rest of my family as well. I have 2 younger brothers Keenan and Andrew and one older sister Oriane. I was origionally born in Portland Oregon where I grew up for the first years of my life. We later moved back to our home town Bethlehem, Palestine where I lived for the past 10 years and recently I moved back to the USA for studies. I am currentyl at George Fox University studying computer science.
-</br>
-  </br>
-  </br>
+<div id="left"><img id="right" src=family.jpg alt="family picture" ><h1>About the Writer</h1>Hello and welcome to my personal blog webpage. My name is Nicholas Alyateem the one on the far right of the picture.You can see the rest of my family as well. I have 2 younger brothers Keenan and Andrew and one older sister Oriane. I was origionally born in Portland Oregon where I grew up for the first years of my life. We later moved back to our home town Bethlehem, Palestine where I lived for the past 10 years and recently I moved back to the USA for studies. I am currently at George Fox University studying computer science.
+<br>
+  <br>
+  <br>
  To explore my webpage you may head to the new tab to see all the different blogs I have posted sorted from newest to oldest.</div>
+  <img id="photo" src=palestine.jpg alt="image of palestine">
+  <footer>Nicholas Alyateem</footer>
 </body>
-<img src=palestine.jpg width="100%" alt="image of palestine">
-<footer>Nicholas Alyateem</footer>
+
+
 </html>
