--- a/new.html
+++ b/new.html
@@ -12,35 +12,35 @@
  <header id = head>
  <a href=personal.html><b>Home Page</b></a>
  | <a href="new.html">Blogs</a>
- | <a href="">Contact Me</a>
+ | <a href="contact.html">Contact Me</a>
  </header>
-</br>
+<br>
 
-<table id="center" width="75%">
+<table id="center">
   <tr>
     <th>Date</th>
     <th>Topic</th>
     <th>Read Time</th>
   </tr>
   <tr>
-    <td>October 4th 2022</td>
-    <td><a href="">The Roadway to the Perfect Chicken Sandwich</a></td>
+    <td>Coming Soon!!!</td>
+    <td><a href="chicken.html">The Roadway to the Perfect Chicken Sandwich</a></td>
     <td>10 min</td>
   </tr>
   <tr>
-    <td id="clear"></td>
-    <td id="clear"><img src="chicken-sammy.jpg" alt="chicken sandwich"></td>
-    <td id="clear"></td>
+    <td class="clear"></td>
+    <td class="clear"><img src="chicken-sammy.jpg" alt="chicken sandwich"></td>
+    <td class="clear"></td>
   </tr>
   <tr>
     <td>September 30th 2022</td>
-    <td><a href="">Birthday Roadtrip</a></td>
+    <td><a href="birthday.html">Birthday Roadtrip</a></td>
     <td>8 min</td>
   </tr>
   <tr>
-    <td id="clear"></td>
-    <td id="clear"><img src="Birthday.jpg" alt="Birthday Pic"></td>
-    <td id="clear"></td>
+    <td class="clear"></td>
+    <td class="clear"><img src="Birthday.jpg" alt="Birthday Pic"></td>
+    <td class="clear"></td>
   </tr>
   
 
