--- a/birthday.html
+++ b/birthday.html
@@ -24,7 +24,7 @@ And that concludes day 1</div>
   
   <div class="pl"><img class="imr" src="d21.jpg" alt="scenarie"><img class="imr" src="d22.jpg" alt="boat ride pic"><h1>Day 2:</h1>
 For day 2 I decided to drive up north towards washington. I began my treck at 11:00am(I slept in due to the night before). I had a lot of fun along the road there where many bypasses which showed a bautiful view of the coast. I had to stop at one viewpoint in particular as I found it absolutely stunning. Along the drive I saw a place that had boat rentals and crabbing so I decided to stop by(And boy im glad I did!). I wasn't to hungry so I decided to see if I could rend a boat. Being that I am 19 and have no licenses for boating whatsover. Surprisingly all they needed was money and I was able to finish one of my life goals of driving a boat. I drove around for a few hours and docked with other boats and had a lot of fun just riding around It taking in the beauty of nature. My time ran out and I headed towards the docks and saw that they were making some fresh live dungenous crab,clams and oysters from the days catch. I of course had to try everything out and they gave me free oysters. The food was absolutely amazing, best crab and seafood I have ever had and the people working there where just the sweetest and nicest people ever. Will definetly hed back over there to go crabbing with my dad some day. After getting done there I ended up driving to washington and headed east towards the i-5 and got myself a room in Kelso,WA. Next day I had breakfast and drove home...<br>
-And with that my little escape was over....
+And with that my little escape was over...
   </div>
   <br>
   <br>
