--- a/new.html
+++ b/new.html
@@ -13,6 +13,7 @@
  <a href=personal.html><b>Home Page</b></a>
  | <a href="new.html">Blogs</a>
  | <a href="contact.html">Contact Me</a>
+ | <a href="create.html">Publish Blog</a>
  </header>
 <br>
 
