--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
  <h1>Welcome to my CSIS 304 assignments page</h1>
   
 <ol>
-  <li><a href=personal.html>Personal Project</a></li>
+  <li><a href=personal.html>Personal Project</a></li> 
   <li><a href="Zen.html">Zen Garden</a></li>
+  <li><a href="create.html"</li>
 </ol>
   
 </body>
