--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <ol>
   <li><a href=personal.html>Personal Project</a></li> 
   <li><a href="Zen.html">Zen Garden</a></li>
-  <li><a href="create.html"</li>
+  <li><a href="create.html">Java Script Project</li>
 </ol>
   
 </body>
