--- a/create.html
+++ b/create.html
@@ -16,7 +16,7 @@
  | <a href="contact.html">Contact Me</a>
  | <a href="create.html">Publish Blog</a>
  </header>
-  <div>This is a page to publish new blogs. This is currently open to the public and new blogs will be posted to the same page. For testing purposes there is an autofill button if you would like to test functionality at the bottom next to the publish button</div>
+  <div>This is a page to publish new blogs. This is currently open to the public and new blogs will be posted to a blank page. For testing purposes there is an autofill button if you would like to test functionality at the bottom next to the publish button. All you have to do is enter all the information for a blog including image links and hit publish and your blog will be formated and created in a new page.</div>
 <div class="center">
   <label for="title">Title of blog:</label><br>
   <textarea name="title" id="title" rows="1"></textarea>
