--- a/create.html
+++ b/create.html
@@ -27,6 +27,7 @@
   <textarea name="info" id="info" placeholder="by: author"></textarea><br>
   <label for="date">Date</label><br>
   <input type="date" id="date">
+  <button id="autodate">Auto Input Today's Date UTC</button>
 </div>
 <div class="left">
   <label for="introt">Intro Title</label><br>
