--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <li><a href=personal.html>Personal Project</a></li> 
   <li><a href="Zen.html">Zen Garden</a></li>
   <li><a href="create.html">Java Script Project</li>
+  <li><a href="finalproject.html">Final Project</li>
 </ol>
   
 </body>
